<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MPD Remote</string>
    <string name="action_settings">Settings</string>
    <string name="action_library">Library</string>
    <string name="action_search">Search</string>
    <string name="action_connect">Connect</string>
    <string name="action_update">Update Db</string>
    <string name="action_status">Status</string>
    <string name="action_queue">Queue</string>
    <string name="dialog_connection_error">Connection Error</string>

    <!-- Dialog -->
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>

    <!-- Settings -->
    <string name="pref_title_host">Host</string>
    <string name="pref_host">Host</string>
    <string name="pref_port">Port</string>

    <!-- Library -->
    <string name="title_activity_playlist">Playlist</string>
    <string name="title_activity_artist_browser">Artists</string>
    <string name="title_activity_album_browser">Albums</string>
    <string name="title_activity_song_browser">Songs</string>
    <string name="title_activity_status">Status</string>
    
    <string name="song_popup_add">Add</string>
    
    
    <string name="delete">Delete</string>
    
    
    <string name="play">Play</string>
    <string name="repeat">Repeat</string>
    <string name="shuffle">Shuffle</string>
    <string name="queue">Q</string>
    <string name="queue_clear">Clear Queue</string>
    <string name="consume_mode">Consume</string>

</resources>
