<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:MPDRemote="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_library"
        android:icon="@drawable/ic_action_collection"
        android:title="@string/action_library"
        android:showAsAction="ifRoom" />
    
    <item 
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        android:showAsAction="never"  />
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_connect"
        android:title="@string/action_connect"
        android:showAsAction="never" />
    <item android:id="@+id/action_status" android:title="@string/action_status" android:showAsAction="never"></item>
   
    <item 
        android:id="@+id/action_queue" 
        android:icon="@drawable/ic_action_add_to_queue"
        android:title="@string/action_queue"
        android:showAsAction="ifRoom" />
    <item 
        android:id="@+id/action_update" 
        android:title="@string/action_update"
        android:showAsAction="never" />
    
 

</menu>
